# hexproof.io

./: .dockerignore  .env.dist  .gitignore  .gitmodules  CHANGELOG.md  README.md  db.json.dist  openapi.json  pyproject.toml
api/: admin.py  apps.py  asgi.py  constants.py  routes.py  settings.py  urls.py  wsgi.py
api/cli/: __init__.py  docs.py  sync.py  update.py
api/endpoints/: cards.py  keys.py  meta.py  sets.py  symbols.py
api/endpoints/mtg/: sets.py  symbols.py
api/migrations/: 0001_initial.py  0002_alter_set_block_alter_set_block_code_and_more.py
api/models/: __init__.py  meta.py  permissions.py  sets.py  symbols.py
api/utils/: logger.py  renderer.py  response.py
core/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
hexproof/: admin.py  apps.py  routes.py
hexproof/endpoints/: keys.py  meta.py
hexproof/endpoints/mtg/: sets.py  symbols.py
hexproof/management/commands/: sync_sets.py  sync_symbols.py
hexproof/migrations/: 0001_initial.py  0002_set_symbol.py  0002_symbol_rarities.py  0003_meta_symbolcollectionwatermark.py  0003_set_symbol.py  0004_meta_values.py  0005_meta_uri_alter_meta_resource_and_more.py  0006_alter_set_block_alter_set_block_code_alter_set_code_and_more.py
hexproof/models/: __init__.py  keys.py  meta.py
hexproof/models/mtg/: sets.py  symbols.py
hexproof/schemas/: __init__.py  keys.py  meta.py
hexproof/schemas/mtg/: sets.py  symbols.py
hexproof/signals/: __init__.py
hexproof/signals/mtg/: symbols.py
hexproof/sources/: enums.py
hexproof/sources/github/: fetch.py
hexproof/sources/mtgjson/: __init__.py  enums.py  fetch.py  types.py
hexproof/sources/scryfall/: __init__.py  enums.py  fetch.py  types.py
hexproof/sources/vectors/: enums.py  fetch.py
hexproof/utils/: archive.py  fetch.py  files.py  project.py  strings.py
main/: admin.py  api.py  models.py  schemas.py
main/management/commands/: add_key.py  delete_key.py  edit_key.py  list_keys.py  toggle_key.py
main/migrations/: 0001_initial.py
