[project]
name = "hexproof.io"
version = "1.1.1"
description = "A comprehensive Magic the Gathering data and resources API."
authors = [{ name = "Investigamer", email = "dev@hexproof.io" }]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["hexproof", "Magic the Gathering", "Magic", "mtg", "scryfall", "mtgjson", "python"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "requests>=2.32.4,<3",
    "bs4~=0.0.2",
    "ratelimit~=2.2.1",
    "pyyaml~=6.0.1",
    "backoff~=2.2.1",
    "yarl~=1.9.3",
    "django-ninja~=1.5.3",
    "python-dotenv~=1.0.0",
    "hexproof==0.4.0",
    "click~=8.1.7",
    "psycopg2-binary~=2.9.9",
    "django-environ~=0.11.2",
    "whitenoise~=6.7.0",
    "typer~=0.20.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9,<2",
    "pytest>=8.1,<9",
    "commitizen>=3.20,<4"
]

[project.scripts]
hexadmin = "api.cli:HexproofCLI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]

[tool.commitizen]
version = "1.1.1"
encoding = "utf-8"
tag_format = "$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version"
]
