[project]
name = "hexproof.io"
version = "1.2.0"
description = "A comprehensive Magic the Gathering data and resources API."
authors = [{ name = "Investigamer", email = "dev@hexproof.io" }]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.15"
keywords = ["hexproof", "Magic the Gathering", "Magic", "mtg", "scryfall", "mtgjson"]
classifiers = [
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14"
]
dependencies = [
    "requests>=2.33.1,<3",
    "bs4~=0.0.2",
    "ratelimit~=2.2.1",
    "pyyaml~=6.0.1",
    "backoff~=2.2.1",
    "yarl>=1.23.0,<1.24",
    "django-ninja~=1.6.2",
    "python-dotenv~=1.2.2",
    "hexproof==0.4.1",
    "click>=8.3.3,<9",
    "psycopg2-binary>=2.9.9,<3",
    "django-environ>=0.13.0,<0.14",
    "whitenoise>=6.12.0,<6.13",
    "typer>=0.25.0,<0.26",
    "django-cors-headers>=4.3,<5",
    "django>=5.2.13",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.9,<2",
    "pytest>=8.1,<9",
    "commitizen>=3.20,<4"
]

[project.scripts]
hexadmin = "api.cli:HexproofCLI"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core"]

[tool.commitizen]
version = "1.2.0"
encoding = "utf-8"
tag_format = "$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version"
]
